update info on date 2017-05-26

--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "Wenli Zhang's CV",
+  "name": "Yuan Ou's CV",
   "version": "1.0.0",
-  "homepage": "http://zhangwenli.com/cv",
+  "homepage": "http://beyondouyuan.github.io/cv",
   "authors": [
-    "Wenli Zhang"
+    "Yuan Ou"
   ],
   "description": "Web Designer and Developer",
   "keywords": [
